--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -18,7 +18,7 @@
         </tr>
         </thead>
         <tbody id="tbody">
-        {{$posts}}
+        {{#posts}}
             <tr>
                 <td>{{id}}</td>
                 <td>{{title}}</td>
